--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,12 @@
-MONGODB_URI=mongodb+srv://therealjinxyz:nilonuj7@cluster0.mqbw7jg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=""
 
 PORT=5001
-#nDSeJuntVrUDJzxd
 
-JWT_SECRET=mysecretkey
+
+JWT_SECRET=""
 
 NODE_ENV=development
 
-CLOUDINARY_CLOUD_NAME=daye3p9bo
-CLOUDINARY_API_KEY=979413579837443
-CLOUDINARY_API_SECRET=aEnwgVYDpSCSpQymnK_hI9ADYI4
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
